--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <h1>H33 - Lesson 08 - Homework 1</h1>
     <p>This is a simple HTML page for Homework 8.</p>
- 
+    <p>Nothing on this page</p>
+
 </body>
 </html>
