--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <h1>H33 - Lesson 08 - Homework 1</h1>
     <p>This is a simple HTML page for Homework 8.</p>
     <p>Make sure to replace this text with your own content.</p>
+    <p>Feel free to add more HTML elements as needed.</p>
+    <p>Remember to validate your HTML and CSS for best practices.</p>
 
 </body>
 </html>
